--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.username = root
 spring.datasource.password = root
+spring.client.service-url.defaultZone=http://localhost:2222/eureka
