--- a/CoachMS.properties
+++ b/CoachMS.properties
@@ -1,1 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost/coach_ms
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
