--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.username = root
 spring.datasource.password = root
 eureka.client.service-url.defaultZone=http://localhost:5555/eureka
+spring.zipkin.base-url=http://localhost:9999/
